implementing basic jwt

--- a/aspnet8-microservices/Mango.Services.AuthAPI/appsettings.json
+++ b/aspnet8-microservices/Mango.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Auth;Trusted_Connection=True"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    }
   }
 }
