adding authorization to coupon api

--- a/aspnet8-microservices/Mango.Services.CouponAPI/appsettings.json
+++ b/aspnet8-microservices/Mango.Services.CouponAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mango_Coupon;Trusted_Connection=True"
+  },
+  "ApiSettings": {
+    "Secret": "S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y - S E C R E T K E Y",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
   }
 }
